# educational_VMEC

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_9f219409ba88cc5ba382894b69fd2c30.html  dir_9f219409ba88cc5ba382894b69fd2c30.js  dir_9f219409ba88cc5ba382894b69fd2c30_dep.map  dir_9f219409ba88cc5ba382894b69fd2c30_dep.md5  dir_b047de4540f0c170bc9a31c46376859f.html  dir_b047de4540f0c170bc9a31c46376859f.js  dir_b047de4540f0c170bc9a31c46376859f_dep.map  dir_b047de4540f0c170bc9a31c46376859f_dep.md5  dir_c1be8d27e7f84178e95f152701110b19.html  dir_c1be8d27e7f84178e95f152701110b19.js  dir_c1be8d27e7f84178e95f152701110b19_dep.map  dir_c1be8d27e7f84178e95f152701110b19_dep.md5  doxygen_crawl.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  index.html  index.js  menudata.js  namespacemembers.html  namespacemembers_b.html  namespacemembers_c.html  namespacemembers_d.html  namespacemembers_e.html  namespacemembers_f.html  namespacemembers_func.html  namespacemembers_g.html  (+63 more)
VMEC2000/: CMakeLists.txt
src/: CMakeLists.txt  add_fluxes.f90  alias.f90  allocate_funct3d.f90  allocate_ns.f90  allocate_nunv.f90  analysum2.f90  aspectratio.f90  bcovar.f90  becoil.f90  belicu.f90  bextrema.f90  biotsavart.f  bsc_T.f  bss.f90  calc_fbal.f90  convert.f90  date_and_computer.f  dbgout.f90  elongation.f90  eqfor.f90  eqsolve.f90  evolve.f90  explore_spline_akima.f90  fext_fft.f90  fileout.f90  fixaray.f90  flip_theta.f90  forces.f90  free_mem_funct3d.f90  free_mem_ns.f90  free_mem_nunv.f90  freeb_data.f90  fsym_fft.f90  fsym_invfft.f90  funct3d.f90  functions.f  getbsubs.f90  getcarg.f  getcurmid.f90  (+49 more)
src/General/: CMakeLists.txt  add_fluxes.f90  alias.f  angle_constraints.f90  aspectratio.f  bcovar.f  convert.f  convert.f90  fbal.f  fbal.f90  forces.f  forces.f_old  funct3d.f  funct3d.f90  funct3d.f_old  getfsq.f  getfsq.f90  jacobian.f  lamcal.f90  precondn.f  realspace.f  realspace.f90  residue.f90  residue.f90_old  scalfor.f  scalfor.f90  spectrum.f  spectrum.f90  symforce.f  symforce.f_old  symrzl.f  tomnsp_mod.f  totzsp_mod.f  vforces.f  vmec_dim.f  vmec_main.f  vmec_main.f90  vmec_params.f  vmec_params.f90  vmec_persistent.f  (+2 more)
src/Hessian/: CMakeLists.txt  precon2d.f
src/Initialization_Cleanup/: CMakeLists.txt  allocate_funct3d.f  allocate_funct3d.f90  allocate_ns.f  allocate_ns.f90  allocate_nunv.f  close_all_files.f  close_all_files.f90  fixaray.f  fixaray.f90  free_mem_funct3d.f  free_mem_funct3d.f90  free_mem_ns.f  free_mem_ns.f90  free_mem_nunv.f  free_persistent_mem.f  free_persistent_mem.f90  guess_axis.f  heading.f  init_geometry.f90  initialize_radial.f  magnetic_fluxes.f  open_output_files.f  open_output_files.f90  profil1d.f  profil1d.f90  profil3d.f  profil3d.f90  profile_functions.f_old  reset_params.f  reset_params.f90  vsetup.f
src/Input_Output/: CMakeLists.txt  TestWout.f  bss.f  bss.f90  elongation.f  elongation.f90  eqfor.f  eqfor.f90  fileout.f  fileout.f90  freeb_data.f  freeb_data.f90  fsym_fft.f  fsym_invfft.f  fsym_invfft.f90  getbrho.f  getcurmid.f  getcurmid.f90  jxbforce.f  mercier.f  mercier.f90  movieout.f  printout.f  read_indata.f  readin.f  readin.f90  timer_sub.f  vmec_io.f  vmec_io.f90  vmercier.f  wrout.f  wrout.f90
src/LIBSTELL/: CMakeLists.txt  date_and_computer.f  ezcdf.f90  functions.f  handle_err.f90  line_segment.f  mgrid_mod.f  parse_extension.f  solver.f  system_mod.f  tridslv.f  vmec_getenv.f  vmec_getenv.f90  vmec_input.f  vparams.f  vsvd0.f
src/LIBSTELL/Ezcdf/: CMakeLists.txt  ezcdf_GenGet.f90  ezcdf_GenPut.f90  ezcdf_attrib.f90  ezcdf_inqvar.f90  ezcdf_opncls.f90  handle_err.f90
src/LIBSTELL/GMRes/: CMakeLists.txt  drive_gmres.f  gmres.f  gmresr.f  init_gmres.f
src/LIBSTELL/Lsode/: CMakeLists.txt
src/LIBSTELL/Miscel/: CHFDV.f  CMakeLists.txt  PCHDF.f  PCHEV.f  PCHEZ.f  PCHFD.f  PCHIM.f  PCHSP.f  PCHST.f  bextrema.f  blk3d.f  build_matrices_legendre.f  convert_boundary.f  convert_boundary_PG.f  ddsum.f  erf.f  factorial.f  fmax.f  fmin.f  getcarg.f  getfilesize.f  init_random_seed.f90  integral.f  legendre_to_power.f  multxy.f  point_wise_to_power.f  power_to_legendre.f  profile_functions.f  pxffork.f  pxfgetpid.f  pxfwait.f  read_namelist.f  spline.f  spline_akima.f  spline_akima_int.f  spline_it.f  splint.f  strip_comments.f  tolower.f90  vmec_chdir.f  (+3 more)
src/LIBSTELL/Modules/: CMakeLists.txt  adas_bms_splines.f90  adas_mod_simpl.f90  biotsavart.f  bsc_T.f  bsc_cdf.f  cyl_flux.f  date_and_computer.f  ez_hdf5.f90  flin1_z.f  flint_z.f  linear_interp.f90  mgrid_field_mod.f90  mgrid_mod.f  mgrid_mod.f_old  mpi_inc.f  mpi_params.f  profiler.f  read_boozer_mod.f  read_pies_mod.f90  read_response.f  read_response_nompi.f  read_spec_mod.f90  read_v3post_mod.f  read_wout_mod.f  stel_constants.f  (+6 more)
src/NESTOR/: CMakeLists.txt  analysum.f90  analysum2.f90  analyt.f90  becoil.f90  belicu.f90  bextern.f90  fouri.f90  fourp.f90  greenf.f90  nestor_main.f90  precal.f90  scalpot.f90  surface.f90  tolicu.f90  vacuum.f90
src/NESTOR_vacuum/: CMakeLists.txt  analysum.f  analysum.f90  analysum2.f  analyt.f  becoil.f  belicu.f  bextern.f  fouri.f  fouri.f90  fourp.f  fourp.f90  greenf.f  greenf.f90  precal.f  precal.f90  scalpot.f  surface.f  tolicu.f  tolicu.f90  vac_persistent.f  vac_persistent.f90  vacmod.f  vacmod.f90  vacmod0.f  vacuum.f  vacuum.f90
src/Splines/: CMakeLists.txt  splintx.f
src/TimeStep/: CMakeLists.txt  eqsolve.f  eqsolve.f90  evolve.f  evolve.f90  gmres_mod.f  interp.f  restart.f  restart_iter.f  runvmec.f  vmec.f  vmec.f90  vmec_history.f
src/data/: CMakeLists.txt  fbal.f90  realspace.f90  stel_constants.f90  stel_kinds.f  vforces.f90  vmec_dim.f90  vmec_input.f90  vmec_io.f90  vmec_main.f90  vmec_params.f90  vmec_persistent.f90  vmercier.f90  vparams.f90  vsvd0.f90  xstuff.f90
src/ezcdf/: CMakeLists.txt  ezcdf_GenGet.f90  ezcdf_GenPut.f90  ezcdf_attrib.f90  ezcdf_inqvar.f90  ezcdf_opncls.f90  handle_err.f90  netcdf_inc.f
(+1158 files in other folders)
