
add_subdirectory(data)
add_subdirectory(ezcdf)
add_subdirectory(NESTOR)

list (APPEND vmec_sources
	${CMAKE_CURRENT_SOURCE_DIR}/eqsolve.f90
	${CMAKE_CURRENT_SOURCE_DIR}/evolve.f90
	${CMAKE_CURRENT_SOURCE_DIR}/interp.f90
	${CMAKE_CURRENT_SOURCE_DIR}/restart_iter.f90
	${CMAKE_CURRENT_SOURCE_DIR}/bextrema.f90
	${CMAKE_CURRENT_SOURCE_DIR}/functions.f
	${CMAKE_CURRENT_SOURCE_DIR}/line_segment.f
	${CMAKE_CURRENT_SOURCE_DIR}/mgrid_mod.f
	${CMAKE_CURRENT_SOURCE_DIR}/parse_extension.f
	${CMAKE_CURRENT_SOURCE_DIR}/profile_functions.f
	${CMAKE_CURRENT_SOURCE_DIR}/read_wout_mod.f
	${CMAKE_CURRENT_SOURCE_DIR}/safe_open_mod.f
	${CMAKE_CURRENT_SOURCE_DIR}/solver.f90
	${CMAKE_CURRENT_SOURCE_DIR}/spline_akima.f
	${CMAKE_CURRENT_SOURCE_DIR}/spline_akima_int.f
	${CMAKE_CURRENT_SOURCE_DIR}/spline_cubic.f
	${CMAKE_CURRENT_SOURCE_DIR}/spline_cubic_int.f
	${CMAKE_CURRENT_SOURCE_DIR}/tolower.f90
	${CMAKE_CURRENT_SOURCE_DIR}/tridslv.f90
	${CMAKE_CURRENT_SOURCE_DIR}/bss.f90
	${CMAKE_CURRENT_SOURCE_DIR}/elongation.f90
	${CMAKE_CURRENT_SOURCE_DIR}/eqfor.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fileout.f90
	${CMAKE_CURRENT_SOURCE_DIR}/freeb_data.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fsym_fft.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fsym_invfft.f90
	${CMAKE_CURRENT_SOURCE_DIR}/getbsubs.f90
	${CMAKE_CURRENT_SOURCE_DIR}/getcurmid.f90
	${CMAKE_CURRENT_SOURCE_DIR}/jxbforce.f90
	${CMAKE_CURRENT_SOURCE_DIR}/mercier.f90
	${CMAKE_CURRENT_SOURCE_DIR}/printout.f90
	${CMAKE_CURRENT_SOURCE_DIR}/readin.f90
	${CMAKE_CURRENT_SOURCE_DIR}/read_indata.f90
	${CMAKE_CURRENT_SOURCE_DIR}/wrout.f90
	${CMAKE_CURRENT_SOURCE_DIR}/allocate_funct3d.f90
	${CMAKE_CURRENT_SOURCE_DIR}/allocate_ns.f90
	${CMAKE_CURRENT_SOURCE_DIR}/allocate_nunv.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fixaray.f90
	${CMAKE_CURRENT_SOURCE_DIR}/free_mem_funct3d.f90
	${CMAKE_CURRENT_SOURCE_DIR}/free_mem_ns.f90
	${CMAKE_CURRENT_SOURCE_DIR}/free_mem_nunv.f90
	${CMAKE_CURRENT_SOURCE_DIR}/guess_axis.f90
	${CMAKE_CURRENT_SOURCE_DIR}/heading.f90
	${CMAKE_CURRENT_SOURCE_DIR}/flip_theta.f90
	${CMAKE_CURRENT_SOURCE_DIR}/initialize_radial.f90
	${CMAKE_CURRENT_SOURCE_DIR}/magnetic_fluxes.f90
	${CMAKE_CURRENT_SOURCE_DIR}/open_output_files.f90
	${CMAKE_CURRENT_SOURCE_DIR}/profil1d.f90
	${CMAKE_CURRENT_SOURCE_DIR}/profil3d.f90
	${CMAKE_CURRENT_SOURCE_DIR}/reset_params.f90
	${CMAKE_CURRENT_SOURCE_DIR}/add_fluxes.f90
	${CMAKE_CURRENT_SOURCE_DIR}/alias.f90
	${CMAKE_CURRENT_SOURCE_DIR}/aspectratio.f90
	${CMAKE_CURRENT_SOURCE_DIR}/bcovar.f90
	${CMAKE_CURRENT_SOURCE_DIR}/convert.f90
	${CMAKE_CURRENT_SOURCE_DIR}/calc_fbal.f90
	${CMAKE_CURRENT_SOURCE_DIR}/forces.f90
	${CMAKE_CURRENT_SOURCE_DIR}/funct3d.f90
	${CMAKE_CURRENT_SOURCE_DIR}/getfsq.f90
	${CMAKE_CURRENT_SOURCE_DIR}/jacobian.f90
	${CMAKE_CURRENT_SOURCE_DIR}/lamcal.f90
	${CMAKE_CURRENT_SOURCE_DIR}/precondn.f90
	${CMAKE_CURRENT_SOURCE_DIR}/residue.f90
	${CMAKE_CURRENT_SOURCE_DIR}/scalfor.f90
	${CMAKE_CURRENT_SOURCE_DIR}/spectrum.f90
	${CMAKE_CURRENT_SOURCE_DIR}/symforce.f90
	${CMAKE_CURRENT_SOURCE_DIR}/symrzl.f90
	${CMAKE_CURRENT_SOURCE_DIR}/tomnsp.f90
	${CMAKE_CURRENT_SOURCE_DIR}/totzsp.f90
)
set (vmec_sources "${vmec_sources}" PARENT_SCOPE)
