
add_subdirectory(data)

list (APPEND vmec_sources
	${CMAKE_CURRENT_SOURCE_DIR}/analysum.f90
	${CMAKE_CURRENT_SOURCE_DIR}/analysum2.f90
	${CMAKE_CURRENT_SOURCE_DIR}/analyt.f90
	${CMAKE_CURRENT_SOURCE_DIR}/becoil.f90
	${CMAKE_CURRENT_SOURCE_DIR}/belicu.f90
	${CMAKE_CURRENT_SOURCE_DIR}/bextern.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fouri.f90
	${CMAKE_CURRENT_SOURCE_DIR}/fourp.f90
	${CMAKE_CURRENT_SOURCE_DIR}/greenf.f90
	${CMAKE_CURRENT_SOURCE_DIR}/precal.f90
	${CMAKE_CURRENT_SOURCE_DIR}/scalpot.f90
	${CMAKE_CURRENT_SOURCE_DIR}/surface.f90
	${CMAKE_CURRENT_SOURCE_DIR}/vacuum.f90
)
set (vmec_sources "${vmec_sources}" PARENT_SCOPE)
